# bokata

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  README-API.md  README.md  USAGE.md  install.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py  tsconfig.json
.github/workflows/: npm-publish.yml
agents/: __init__.py  base.py  bokata-product-coordinator.md  bokata-product-designer.md  bokata-product-engineer.md  bokata-product-manager.md  doc_generator.py  feature_backbone.py  increment_generator.py  path_composer.py  step_analyzer.py
commands/codex/: feature-map.md  slice-feature.md
commands/opencode/: feature-map.md  slice-feature.md
commands/task-parallel/: feature-map.md  slice-feature.md
examples/: basic-usage.ts  complete-workflow.ts  example-project.md  project-analysis.ts  simple-example.ts  using-commands.ts  using-specialists.ts  web-integration.ts  workflow-context-usage.ts
flow/: __init__.py  feature_flow.py  project_flow.py
models/: __init__.py  request.py  response.py
prompts/: __init__.py  doc_generator.py  feature_backbone.py  increment_generator.py  path_composer.py  step_analyzer.py
src/: __init__.py  index.ts  install.js  main.py
src/agents/: __init__.py  base-agent.ts  base.py  coordinator-agent.ts  feature-analyzer.ts  index.ts  matrix-generator.ts  paths-generator.ts  project-analyzer.ts  specialist-agent.ts  specialists.ts
src/api/: bokata-api.ts  bokata-commands.ts  index.ts  routes.ts
tests/: __init__.py  test_api.py
utils/: __init__.py  call_llm.py  markdown.py
(+42 files in other folders)
